--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.12'
+    implementation 'com.google.code.gson:gson:2.8.9'
 }
