--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,9 +52,11 @@ dependencies {
     implementation 'com.gyf.immersionbar:immersionbar:3.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation files('libs\\BaiduLBS_Android.jar')
+    implementation files('libs\\spring-test-utils-1.0.2.jar')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.12'
     implementation 'com.google.code.gson:gson:2.8.9'
+
 }
